--- a/officeTrainner/Vista/FormMain.resx
+++ b/officeTrainner/Vista/FormMain.resx
@@ -1031,4 +1031,7 @@
         kvT9/fTP/w/BqEuEM7miigAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
